[gd_scene load_steps=14 format=3 uid="uid://dcr8ltd5wr3n2"]

[ext_resource type="Script" uid="uid://te8xquqek8hj" path="res://level.gd" id="1_oi3di"]
[ext_resource type="PackedScene" uid="uid://bstw7kcfy0m6e" path="res://canvas_layer.tscn" id="2_km5ld"]
[ext_resource type="Texture2D" uid="uid://cwpc8q1buhhj4" path="res://Sprites/Background/counter.png" id="2_vonw3"]
[ext_resource type="Texture2D" uid="uid://cy4dna61t86w2" path="res://Sprites/2303.w064.n002.72B.p1.72.jpg" id="3_i2t4f"]
[ext_resource type="Texture2D" uid="uid://dda31ptts437v" path="res://boy_cust.png" id="4_0b4ue"]
[ext_resource type="Texture2D" uid="uid://c8m3b66ln4jxy" path="res://Sprites/Dish/Banana_Bread.png" id="5_n6hdu"]
[ext_resource type="Texture2D" uid="uid://dmldmb24ih5eh" path="res://Sprites/Dish/Cheese_Sandwich.png" id="6_km5ld"]
[ext_resource type="Texture2D" uid="uid://cdg70rkl0f7m8" path="res://Sprites/Dish/Pancakes.png" id="7_i2t4f"]
[ext_resource type="FontFile" uid="uid://dr3q2rb60qi5d" path="res://Kitchen.ttf" id="9_i2t4f"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vonw3"]
texture = ExtResource("3_i2t4f")
modulate_color = Color(1, 1, 1, 0.784314)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_oi3di"]
texture = ExtResource("2_vonw3")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n6hdu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_km5ld"]
bg_color = Color(0.705882, 0.309804, 0.0745098, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Node2D" type="Node2D"]
script = ExtResource("1_oi3di")
pause_menu_scene = ExtResource("2_km5ld")

[node name="background" type="Panel" parent="."]
offset_left = -1.0
offset_top = -2.0
offset_right = 1151.0
offset_bottom = 649.0
theme_override_styles/panel = SubResource("StyleBoxTexture_vonw3")

[node name="counter" type="Panel" parent="."]
offset_top = -3.0
offset_right = 1154.0
offset_bottom = 654.0
theme_override_styles/panel = SubResource("StyleBoxTexture_oi3di")

[node name="CustomerSection" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CustomerCard" type="Control" parent="CustomerSection"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CustomerImage" type="TextureRect" parent="CustomerSection/CustomerCard"]
layout_mode = 1
anchors_preset = -1
anchor_right = 28.499
anchor_bottom = 16.156
offset_left = 391.0
offset_top = 85.0
offset_right = 275.04
offset_bottom = 462.76
scale = Vector2(0.359999, 0.360001)
texture = ExtResource("4_0b4ue")

[node name="CustomerInfo" type="Label" parent="CustomerSection/CustomerCard"]
layout_mode = 1
anchors_preset = -1
anchor_right = 10.65
anchor_bottom = 8.525
offset_right = -3.05176e-05
offset_bottom = -3.05176e-05
theme_override_colors/font_color = Color(0.952941, 0.631373, 0.192157, 1)
theme_override_colors/font_shadow_color = Color(0.701961, 0.313726, 0.0705882, 1)
theme_override_colors/font_outline_color = Color(0.996078, 0.819608, 0.501961, 1)
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 20
theme_override_font_sizes/font_size = 40
text = "Ready for the next customer! Scan them to begin."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ScanButton" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 489.0
offset_top = 322.0
offset_right = 619.0
offset_bottom = 370.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_disabled_color = Color(0.952941, 0.631373, 0.192157, 1)
theme_override_colors/font_hover_pressed_color = Color(0.996078, 0.819608, 0.501961, 1)
theme_override_colors/font_hover_color = Color(0.952941, 0.631373, 0.192157, 1)
theme_override_colors/icon_disabled_color = Color(0.701961, 0.313726, 0.0705882, 1)
theme_override_colors/icon_hover_pressed_color = Color(0.701961, 0.313726, 0.0705882, 1)
theme_override_colors/icon_hover_color = Color(0.701961, 0.313726, 0.0705882, 1)
theme_override_colors/icon_pressed_color = Color(0.701961, 0.313726, 0.0705882, 1)
theme_override_colors/icon_focus_color = Color(0.701961, 0.313726, 0.0705882, 1)
theme_override_colors/icon_normal_color = Color(0.701961, 0.313726, 0.0705882, 1)
theme_override_colors/font_outline_color = Color(0.701961, 0.313726, 0.0705882, 1)
theme_override_colors/font_color = Color(0.952941, 0.631373, 0.192157, 1)
theme_override_colors/font_focus_color = Color(0.701961, 0.313726, 0.0705882, 1)
theme_override_colors/font_pressed_color = Color(0.701961, 0.313726, 0.0705882, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("9_i2t4f")
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = SubResource("StyleBoxEmpty_n6hdu")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_km5ld")
theme_override_styles/disabled = SubResource("StyleBoxFlat_km5ld")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_km5ld")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_km5ld")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_km5ld")
theme_override_styles/hover = SubResource("StyleBoxFlat_km5ld")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_km5ld")
theme_override_styles/pressed = SubResource("StyleBoxFlat_km5ld")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_km5ld")
theme_override_styles/normal = SubResource("StyleBoxFlat_km5ld")
text = "Scan"

[node name="ButtonGrid" type="GridContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_right = 5.9
anchor_bottom = 3.4
offset_left = 154.0
offset_top = 435.0
offset_right = 4079.0
offset_bottom = 930.0
scale = Vector2(0.2, 0.24)
theme_override_constants/h_separation = 1060
columns = 3

[node name="Option1" type="TextureButton" parent="Control/ButtonGrid"]
layout_mode = 2
texture_normal = ExtResource("5_n6hdu")

[node name="Option2" type="TextureButton" parent="Control/ButtonGrid"]
layout_mode = 2
texture_normal = ExtResource("6_km5ld")

[node name="Option3" type="TextureButton" parent="Control/ButtonGrid"]
layout_mode = 2
texture_normal = ExtResource("7_i2t4f")

[node name="MessageBox" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.425
anchor_right = 8.125
anchor_bottom = 7.275
offset_top = 45.0
offset_bottom = 45.0
theme_override_colors/font_color = Color(0.952941, 0.631373, 0.192157, 1)
theme_override_colors/font_shadow_color = Color(0.701961, 0.313726, 0.0705882, 1)
theme_override_colors/font_outline_color = Color(0.996078, 0.819608, 0.501961, 1)
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 20
theme_override_font_sizes/font_size = 40
text = "Ready for the next customer! Scan them to begin."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[connection signal="pressed" from="Control/ScanButton" to="." method="_on_scan_button_pressed"]
